# formalization-of-mathematics

./: .gitignore  README
coq/: Makefile
examples/: avl.v  bool.v  karatsuba.v  nat-ssr.v  nat.v  set_prop_type.v  sort.v  toom-cook-nat.hs
exercises/map/: exercises-05.v  exercises-07.v
exercises/softwarefoundations/: Lists.v
halftime/: brainstorm.txt  example.v
haskell/: Examples.hs  Main  Main.hs  Makefile  Properties.hs  ToomCook.hs  toomcook.cabal
haskell/src/: Main.hs  Properties.hs  Settings.hs  ToomCook.hs
map/: exercises-02.v  exercises-03.v  exercises-04.v  exercises-05.v  exercises-07.v  exercises-08.v
planningreport/: Makefile  report.tex
report/: Makefile  report.tex
reports/full/: Makefile  coq.tex  defManSSR.tex  diskussion.tex  formalisering.tex  inledning.tex  karatsuba-proof.tex  macro.tex  metod.tex  report.bib  report.tex  resultat.tex  teori.tex  toomcook-coq.tex  toomcook-nat.tex  toomcook.tex
reports/full/src/: abstract-en.tex  abstract-se.tex  abstract.tex  acknowledgements.tex  algebra.tex  coq.tex  coqide.tex  diskussion.tex  exempel.tex  formalisering.tex  formelalgoritm.tex  formelltbevis.tex  haskell.tex  inledning.tex  metod.tex  (+2 more)
softwarefoundations/: Basics.v  Gen.v  Logic.v  Makefile  Poly.v  Prop.v
toomcook/: Examples.hs  Makefile  Properties.hs  ToomCook.v  ToomCookNat.hs  toom-cook-nat.hs
toomcook/coq/: ToomCook.v
toomcook/haskell/: Makefile  toomcook.cabal
toomcook/haskell/src/: Bench.hs  Debug.hs  Impl.hs  ImplOpt.hs  Main.hs  Naive.hs  Nat.hs  Properties.hs  Settings.hs  ToomCook.hs  ToomCookOpt.hs
(+27 files in other folders)
