name: toomcook
version: 0.1.0.0
synopsis: Integer multiplication with the Toom-Cook algorithm.
homepage: github.com/daoo/formalization-of-mathematics
license: PublicDomain
author: daoo
category: Algebra
build-type: Simple
cabal-version: >=1.8

library
  exposed-modules:
    ToomCook,
    Settings
  build-depends: base, integer-gmp
  hs-source-dirs: src
  ghc-options: -Wall

executable bench
  main-is: src/Benchmark.hs
  build-depends: toomcook, base
  ghc-options: -Wall

test-suite properties
  type: exitcode-stdio-1.0
  main-is: src/Properties.hs
  build-depends: toomcook, base, QuickCheck
